shipy_webapp/shipy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipy-webapp-service
  namespace: shipy
spec:
  selector:
    app: shipy-webapp
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
  type: ClusterIP
