shipy_webapp/shipy_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipy-webapp-ingress
  namespace: shipy
  annotations:
    # deprecated
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shipy-webapp-service
                port:
                  number: 7000
